--- a/web-project/index.html
+++ b/web-project/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Site</title>
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/backgrounds.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -12,7 +11,7 @@
 <body>
 <div id="header">
     <div id="top">
-            <img src="/img/logo.png" id="logo-top" alt="">
+            <img src="./img/logo.png" id="logo-top" alt="">
         <ul>
             <li><button>shop</button></li>
             <li>Inspiring stories</li>
@@ -21,19 +20,19 @@
             <li>Sign in</li>
         </ul>
         <ul>
-            <li><img src="/img/square.png" alt="квадрат"></li>
+            <li><img src="./img/square.png" alt="квадрат"></li>
             <li>
-                <button>Menu <img src="/img/sticks-menu.png" alt="menu-img"></button>
+                <button>Menu <img src="./img/sticks-menu.png" alt="menu-img"></button>
             </li>
-            <li><img src="/img/eu-top.png" alt="сменить язык"></li>
-            <li><img src="/img/basket-top.png" alt="корзина"></li>
+            <li><img src="./img/eu-top.png" alt="сменить язык"></li>
+            <li><img src="./img/basket-top.png" alt="корзина"></li>
         </ul>
     </div>
     <div id="nav">
         <div id="info-nav">
-            <img src="/img/heart-nav.png" alt="сердечко">
+            <img src="./img/heart-nav.png" alt="сердечко">
             <text>22,263 Happy Customers</text>
-            <img src="/img/truck-nav.png" alt="грузовик">
+            <img src="./img/truck-nav.png" alt="грузовик">
             <text>Free shipping from €300</text>
             <img src="img/cuvette-nav.png" alt="валик для покраски стены">
             <text>Fully customizable</text>
@@ -42,7 +41,7 @@
 </div>
 <div id="design-order">
     <div id="warning-design-order">
-        <img src="/img/lines-warning-nav.png" alt="">
+        <img src="./img/lines-warning-nav.png" alt="">
         <text>From 1st of January, Brexit changes the rules of shipping to the UK. Read our update</text>
     </div>
     <div id="base-design-order">
@@ -51,7 +50,7 @@
             <text>Without a hassle.</text><br><br><br>
             <button class="button-shop">Shop now</button>
         </div>
-        <img src="/img/the%20perfect.png" alt="">
+        <img src="./img/the%20perfect.png" alt="">
     </div>
 </div>
 <div id="local-heroes">
@@ -72,7 +71,7 @@
                 </ul>
                 <button class="button-shop">Buy now</button>
             </div>
-            <img src="/img/box-local-hero.png" alt="коробка">
+            <img src="./img/box-local-hero.png" alt="коробка">
         </div>
         <div class="rectangle-local-heroes">
             <div>
@@ -84,7 +83,7 @@
                 </ul>
                 <button>Browse products</button>
             </div>
-            <img src="/img/boxs-local-hero.png" alt="коробка">
+            <img src="./img/boxs-local-hero.png" alt="коробка">
         </div>
         </div>
     <div id="down-local-heroes">
@@ -95,56 +94,56 @@
             Get the most from your packaging solutions.
         </h2>
         <a href="#">Describe your needs</a><br>
-        <img src="/img/factory-local-hero.png" alt="фабрика">
+        <img src="./img/factory-local-hero.png" alt="фабрика">
     </div>
 </div>
 <div id="goods-grid">
     <div id="first-goods-grid">
-        <div class="goods"><img src="/img/goods1.png" alt=""></div>
-        <div class="goods"><img src="/img/goods2.png" alt=""></div>
-        <div class="goods"><img src="/img/goods3.png" alt=""></div>
-        <div class="goods"><img src="/img/goods4.png" alt=""></div>
-        <div class="goods"><img src="/img/goods5.png" alt=""></div>
-        <div class="goods"><img src="/img/goods6.png" alt=""></div>
+        <div class="goods"><img src="./img/goods1.png" alt=""></div>
+        <div class="goods"><img src="./img/goods2.png" alt=""></div>
+        <div class="goods"><img src="./img/goods3.png" alt=""></div>
+        <div class="goods"><img src="./img/goods4.png" alt=""></div>
+        <div class="goods"><img src="./img/goods5.png" alt=""></div>
+        <div class="goods"><img src="./img/goods6.png" alt=""></div>
     </div>
     <div id="second-goods-grid">
-        <div class="goods"><img src="/img/goods7.png" alt=""></div>
-        <div class="goods"><img src="/img/goods8.png" alt=""></div>
-        <div class="goods"><img src="/img/goods9.png" alt=""></div>
-        <div class="goods"><img src="/img/goods10.png" alt=""></div>
-        <div class="goods"><img src="/img/goods11.png" alt=""></div>
-        <div class="goods"><img src="/img/goods12.png" alt=""></div>
+        <div class="goods"><img src="./img/goods7.png" alt=""></div>
+        <div class="goods"><img src="./img/goods8.png" alt=""></div>
+        <div class="goods"><img src="./img/goods9.png" alt=""></div>
+        <div class="goods"><img src="./img/goods10.png" alt=""></div>
+        <div class="goods"><img src="./img/goods11.png" alt=""></div>
+        <div class="goods"><img src="./img/goods12.png" alt=""></div>
     </div>
     <div id="third-goods-grid">
-        <div class="goods"><img src="/img/goods13.png" alt=""></div>
-        <div class="goods"><img src="/img/goods14.png" alt=""></div>
-        <div class="goods"><img src="/img/goods15.png" alt=""></div>
-        <div class="goods"><img src="/img/goods16.png" alt=""></div>
-        <div class="goods"><img src="/img/goods17.png" alt=""></div>
+        <div class="goods"><img src="./img/goods13.png" alt=""></div>
+        <div class="goods"><img src="./img/goods14.png" alt=""></div>
+        <div class="goods"><img src="./img/goods15.png" alt=""></div>
+        <div class="goods"><img src="./img/goods16.png" alt=""></div>
+        <div class="goods"><img src="./img/goods17.png" alt=""></div>
     </div>
     <div id="fourth-goods-grid">
-        <div class="goods"><img src="/img/goods18.png" alt=""></div>
-        <div class="goods"><img src="/img/goods19.png" alt=""></div>
-        <div class="goods"><img src="/img/goods20.png" alt=""></div>
-        <div class="goods"><img src="/img/goods21.png" alt=""></div>
+        <div class="goods"><img src="./img/goods18.png" alt=""></div>
+        <div class="goods"><img src="./img/goods19.png" alt=""></div>
+        <div class="goods"><img src="./img/goods20.png" alt=""></div>
+        <div class="goods"><img src="./img/goods21.png" alt=""></div>
     </div>
     <div id="fifth-goods-grid">
-        <div class="goods"><img src="/img/goods22.png" alt=""></div>
-        <div class="goods"><img src="/img/goods23.png" alt=""></div>
-        <div class="goods"><img src="/img/goods24.png" alt=""></div>
+        <div class="goods"><img src="./img/goods22.png" alt=""></div>
+        <div class="goods"><img src="./img/goods23.png" alt=""></div>
+        <div class="goods"><img src="./img/goods24.png" alt=""></div>
     </div>
     <div id="sixth-goods-grid">
-        <div class="goods"><img src="/img/goods25.png" alt=""></div>
-        <div class="goods"><img src="/img/goods26.png" alt=""></div>
-        <div class="goods"><img src="/img/goods27.png" alt=""></div>
-        <div class="goods"><img src="/img/goods28.png" alt=""></div>
+        <div class="goods"><img src="./img/goods25.png" alt=""></div>
+        <div class="goods"><img src="./img/goods26.png" alt=""></div>
+        <div class="goods"><img src="./img/goods27.png" alt=""></div>
+        <div class="goods"><img src="./img/goods28.png" alt=""></div>
     </div>
     <div id="seventh-goods-grid">
-        <div class="goods"><img src="/img/goods29.png" alt=""></div>
-        <div class="goods"><img src="/img/goods30.png" alt=""></div>
-        <div class="goods"><img src="/img/goods31.png" alt=""></div>
-        <div class="goods"><img src="/img/goods32.png" alt=""></div>
-        <div class="goods"><img src="/img/goods33.png" alt=""></div>
+        <div class="goods"><img src="./img/goods29.png" alt=""></div>
+        <div class="goods"><img src="./img/goods30.png" alt=""></div>
+        <div class="goods"><img src="./img/goods31.png" alt=""></div>
+        <div class="goods"><img src="./img/goods32.png" alt=""></div>
+        <div class="goods"><img src="./img/goods33.png" alt=""></div>
     </div>
     <div id="text-goods">
         <h1>The one place to get your<br> custom packaging. In all<hr> its shapes, forms and<hr> numbers.<hr /></h1>
@@ -200,7 +199,9 @@
         </div>
     <div class="custom-see">
         <text>Stay updated with our<br> packaging news.</text>
-        <input type="email" placeholder="    E-mail">
+        <label>
+            <input type="email" placeholder="E-mail" class="input-email">
+        </label>
         <div>
             <input type="checkbox">
             <text>I agree to Packhelp.com Terms<br> and Conditions and Privacy Policy.</text>
@@ -288,11 +289,11 @@
         <ul>
             <li>
                 Our website is compatible with many popular payment methods.<br>
-                <img src="/img/mastercard.png" alt="">
-                <img src="/img/maestro.png" alt="">
-                <img src="/img/cirrus.png" alt="">
-                <img src="/img/visa.png" alt="">
-                <img src="/img/paypal.png" alt=""><br><br><br><br><br>
+                <img src="./img/mastercard.png" alt="">
+                <img src="./img/maestro.png" alt="">
+                <img src="./img/cirrus.png" alt="">
+                <img src="./img/visa.png" alt="">
+                <img src="./img/paypal.png" alt=""><br><br><br><br><br>
             </li>
             <li>Business Hours</li>
             <li>Monday - Friday</li>
@@ -304,11 +305,5 @@
     <div><text>Copyright Packhelp 2020</text> <text>SSL 100% Secure Transactions</text> <text>SSL 100% Secure Transactions</text></div>
     <div><text>Terms of Service</text> <text>Terms of Service</text></div>
 </div>
-
-
-
-
-
-
 </body>
 </html>
